# C-Project-Assembler

./: CMakeLists.txt  README.md  assembler.c  assembler.h  create_obj_files.c  create_obj_files.h  create_output_files.c  create_output_files.h  encoding_functions.c  encoding_functions.h  error_detection_pass.c  error_detection_pass.h  error_test_2.am  error_test_2.as  error_test_2.ent  first_pass_through.c  first_pass_through.h  instruction_handling.c  instruction_handling.h  o2.am  o2.as  parse_macros.c  parse_macros.h  processing_helpers.c  processing_helpers.h  second_pass_through.c  second_pass_through.h  success_test_1.as  success_test_2.ob  symbol_table.c  symbol_table.h  t1.am  t1.as  t1.ent  t1.ext  t1.ob  utils.c  utils.h
tests/: error_test_1.am  error_test_1.as
